<resources>

    <!-- Strings für ganze App -->
    <string name="app_name">VS_jdermelj_Webservices</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Willkommen! Das hier ist das App für Assignment 2 von der Gruppe jdermelj.</string>
    <string name="button_start_activity_1">REST Webservices Task 1</string>
    <string name="button_start_activity_2">WS-* Web-Services Task 2</string>
    <string name="button_start_activity_3">Phone as Server Task 3</string>

    <!-- Strings für Task 1 -->
    <string name="title_activity_activity_1">Task 1</string>
    <string name="welcome_task1">Hol die Temperatur mit REST. Wähle mit den Buttons die Übertragungsart.</string>
    <string name="temperatureIs">Die Temperatur ist:\t</string>
    <string name="nothing_received">Es wurde noch nichts empfangen.</string>
    <string name="button_raw_temperature">Roh</string>
    <string name="button_html_temperature">Html</string>
    <string name="invalid_temperature">Die Temperatur konnte nicht richtig aufgerufen werden.</string>
    <string name="button_json_temperature">JSON</string>

    <!-- Strings für Task 2 -->
    <string name="title_activity_activity_2">Task 2</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_task2">Hol die Temperatur mit SOAP (XML-WebService). Wähle mit den Buttons die Übertragungsart.</string>
    <string name="button_manual">Manuell</string>
    <string name="button_ksoap2">KSOAP2-Bibliothek</string>
        //name = nothing_received


    <!-- Strings für Task 3 -->
    <string name="title_activity_activity_3">Task 3</string>
    <string name="start_btn">Start Server</string>
    <string name="stop_btn">Stop Server</string>
    <string name="ip_address">IP Address: ...</string>
    <string name="port_nr">Port Number: ...</string>



</resources>
