<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ch.ethz.inf.vs.a2.vs_jdermelj_webservices.Activity_1">

    <TextView android:text="@string/welcome_task1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_raw_temperature"
        android:onClick="getRawTemperature" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_html_temperature"
        android:onClick="getHtmlTemperature" />

    <TextView android:text="@string/nothing_received"
        android:id="@+id/TEMPVALTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
